add elements on the header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <a href="" target="_blank">Donna</a>
+            <a href="" target="_blank">Uomo</a>
+            <a href="" target="_blank">Bambini</a>
+        </nav>
+        <div class="logo">
+            <img src="./assets/img/boolean-logo.png" alt="">
+        </div>
+        <div class="actions">
+            <i class="fa-solid fa-user"></i>           
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-bag-shopping"></i>
+        </div>
+
+    </header>
     
 </body>
 </html>
