--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <main>
         <div class="upper-images">
             <div class="first-image">
-                <img src="./assets/img/1.webp" alt="" id="first-pic">
-                <p>Levi's</p>
+                <img src="./assets/img/1.webp" alt="" class="first-pic">
+<!--                 <img src="./assets/img/1b.webp" alt="" class="first-pic-b">
+ -->                <p>Levi's</p>
                 <h4>RELAXED FIT TEE UNISEX</h4>
                 <p><span>14,99&euro;</span> <span id="entire-price">29,99&euro;</span></p>
                 <i class="fa-solid fa-heart"></i>
@@ -41,7 +42,7 @@
                 <p id="sostenibility">Sostenibilità</p>
             </div>
             <div class="second-image">
-                <img src="./assets/img/2.webp" alt="" id="second-pic">
+                <img src="./assets/img/2.webp" alt="" class="second-pic">
                 <p>Guess</p>
                 <h4>ROSES TEE</h4>
                 <p><span>20,99&euro;</span> <span id="entire-price">29,99&euro;</span></p>
@@ -52,7 +53,7 @@
             </div>
            
             <div class="third-image">
-                <img src="./assets/img/3.webp" alt="" id="third-pic">
+                <img src="./assets/img/3.webp" alt="" class="third-pic">
                 <p>Come Zucchero Filato</p>
                 <h4>VOLFIA DI COLORI PASTELLO</h4>
                 <p><span>129,99&euro;</span> <span id="entire-price">184,99&euro;</span></p>
@@ -66,7 +67,7 @@
 
         <div class="lower-images">
            <div class="fourth-image">
-            <img src="./assets/img/4.webp" alt="" id="fourth-pic">
+            <img src="./assets/img/4.webp" alt="" class="fourth-pic">
             <p>Levi's</p>
                 <h4>TEE UNISEX</h4>
                 <p><span>14,99&euro;</span> <span id="entire-price">29,99&euro;</span></p>
@@ -78,14 +79,14 @@
                 <p id="sostenibility">Sostenibilità</p>
            </div>
            <div class="fifth-image">
-            <img src="./assets/img/5.webp" alt="" id="fifth-pic">
+            <img src="./assets/img/5.webp" alt="" class="fifth-pic">
             <p>Maya Deluxe</p>
                 <h4>STRIPE BODICE</h4>
                 <p><span>99,99&euro;</span> <p>
                     <i class="fa-solid fa-heart"></i>
            </div>
            <div class="sixth-image">
-            <img src="./assets/img/6.webp" alt="" id="sixth-pic">
+            <img src="./assets/img/6.webp" alt="" class="sixth-pic">
             <p>Esprit</p>
                 <h4>MAGLIONE - BLACK</h4>
                 <p><span>29,99&euro;</span></p>
