fix an html paragraph

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="third-image">
                 <img src="./assets/img/3.webp" alt="" class="third-pic">
                 <p>Come Zucchero Filato</p>
-                <h4>VOLFIA DI COLORI PASTELLO</h4>
+                <h4>VOGLIA DI COLORI PASTELLO</h4>
                 <p><span>129,99&euro;</span> <span id="entire-price">184,99&euro;</span></p>
                 <i class="fa-solid fa-heart"></i>
                 <div class="sale">
