fix hover "function"

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <main>
         <div class="upper-images">
-            <div class="first-image">
+            <div class="card">
                 <img src="./assets/img/1.webp" alt="" class="first-pic">
-<!--                 <img src="./assets/img/1b.webp" alt="" class="first-pic-b">
- -->                <p>Levi's</p>
+                <img src="./assets/img/1b.webp" alt="" class="first-pic-b" >
+                <p>Levi's</p>
                 <h4>RELAXED FIT TEE UNISEX</h4>
                 <p><span>14,99&euro;</span> <span id="entire-price">29,99&euro;</span></p>
                 <i class="fa-solid fa-heart"></i>
@@ -41,8 +41,10 @@
                 </div>
                 <p id="sostenibility">Sostenibilità</p>
             </div>
-            <div class="second-image">
-                <img src="./assets/img/2.webp" alt="" class="second-pic">
+            
+            <div class="card">
+                <img src="./assets/img/2.webp" alt="" class="first-pic">
+                <img src="./assets/img/2b.webp" alt="" class="first-pic-b">
                 <p>Guess</p>
                 <h4>ROSES TEE</h4>
                 <p><span>20,99&euro;</span> <span id="entire-price">29,99&euro;</span></p>
@@ -52,8 +54,9 @@
                 </div>
             </div>
            
-            <div class="third-image">
-                <img src="./assets/img/3.webp" alt="" class="third-pic">
+            <div class="card">
+                <img src="./assets/img/3.webp" alt="" class="first-pic">
+                <img src="./assets/img/3b.webp" alt="" class="first-pic-b">
                 <p>Come Zucchero Filato</p>
                 <h4>VOGLIA DI COLORI PASTELLO</h4>
                 <p><span>129,99&euro;</span> <span id="entire-price">184,99&euro;</span></p>
@@ -66,8 +69,9 @@
         </div>
 
         <div class="lower-images">
-           <div class="fourth-image">
-            <img src="./assets/img/4.webp" alt="" class="fourth-pic">
+           <div class="card">
+            <img src="./assets/img/4.webp" alt="" class="first-pic">
+            <img src="./assets/img/4b.webp" alt="" class="first-pic-b">
             <p>Levi's</p>
                 <h4>TEE UNISEX</h4>
                 <p><span>14,99&euro;</span> <span id="entire-price">29,99&euro;</span></p>
@@ -78,15 +82,17 @@
                 </div>
                 <p id="sostenibility">Sostenibilità</p>
            </div>
-           <div class="fifth-image">
-            <img src="./assets/img/5.webp" alt="" class="fifth-pic">
+           <div class="card">
+            <img src="./assets/img/5.webp" alt="" class="first-pic">
+            <img src="./assets/img/5b.webp" alt="" class="first-pic-b">
             <p>Maya Deluxe</p>
                 <h4>STRIPE BODICE</h4>
                 <p><span>99,99&euro;</span> <p>
                     <i class="fa-solid fa-heart"></i>
            </div>
-           <div class="sixth-image">
-            <img src="./assets/img/6.webp" alt="" class="sixth-pic">
+           <div class="card">
+            <img src="./assets/img/6.webp" alt="" class="first-pic">
+            <img src="./assets/img/6b.webp" alt="" class="first-pic-b">
             <p>Esprit</p>
                 <h4>MAGLIONE - BLACK</h4>
                 <p><span>29,99&euro;</span></p>
